exports[`test Example1 toggles Message on each click 1`] = `
<div>
  <h2>
    Example 1 - 
    <small>
      click once to toggle
    </small>
  </h2>
  <input
    onClick={[Function]}
    type="submit"
    value="Toggle message" />
</div>
`;

exports[`test Example1 toggles Message on each click 2`] = `
<div>
  <h2>
    Example 1 - 
    <small>
      click once to toggle
    </small>
  </h2>
  <input
    onClick={[Function]}
    type="submit"
    value="Toggle message" />
  <p>
    Hello world!!!
  </p>
</div>
`;
